syntax = "proto3";

package CalculatorPkg;

service Calculator
{
	rpc Add(CalcRequest) returns (CalcResponse){}
	rpc Subtract(CalcRequest) returns (CalcResponse){}
}

message CalcRequest{
	int32 a=1;
	int32 b=2;
}

message CalcResponse{
	int32 result =1;
}

